k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "gettomethod"
  namespace: "ddos-disco"
  labels:
    app: "gettomethod"
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: "gettomethod"
    spec:
      containers:
        - name: "gettomethod"
          readinessProbe:
            httpGet:
              path: / 
              port: 8080
              scheme: HTTP
            failureThreshold: 5
            successThreshold: 2
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 2
          image: maazghani/gettomethod
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
      dnsPolicy: ClusterFirst
